--- a/config/developpment.yml
+++ b/config/developpment.yml
@@ -10,15 +10,18 @@ cors:
 postgres:
   host: localhost
   port: 5432
-  user: postgres_container
+  user: postgres
   password: Mohammad1367
   database: pecalets
   sslMode: false
 redis:
-  host: redis_container
+  host: localhost
   port: 6379
   password: Mohammad1367
   database: 0
   minIdleConnections: 100
   poolSize: 5000
   poolTimeout: 240
+rateLimit:
+  requestsPerSecond: 5
+  burstSize: 2
