--- a/config/docker.yml
+++ b/config/docker.yml
@@ -19,9 +19,12 @@ redis:
   port: 6379
   password: Mohammad1367
   database: 0
-  minIdleConnections: 100
-  poolSize: 5000
-  poolTimeout: 240
+  dialTimeout: 5
+  readTimeout: 5
+  writeTimeout: 5
+  poolSize: 10
+  poolTimeout: 15
+  idleCheckFrequency: 500
 rateLimit:
   requestsPerSecond: 5
   burstSize: 2
