--- a/config/docker.yml
+++ b/config/docker.yml
@@ -8,12 +8,15 @@ logger:
 cors:
   allowOrigins: "*"
 postgres:
-  host: localhost
+  host: postgres_container
   port: 5432
-  user: postgres_container
+  username: postgres
   password: Mohammad1367
   database: pecalets
-  sslMode: false
+  sslMode: disable
+  maxIdleConns: 15
+  maxOpenConns: 100
+  connMaxLifetime: 5
 redis:
   host: redis_container
   port: 6379
