--- a/config/developpment.yml
+++ b/config/developpment.yml
@@ -2,7 +2,7 @@ server:
   port: 8001
   runMode: debug
 logger:
-  filePath: ../logs/logs.log
+  filePath: storage/logs/
   encoding: json
   level: debug
 cors:
