--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -73,7 +73,7 @@ services:
       - --strict.perms=false
     volumes:
       - ./elk/filebeat/config/filebeat.yml:/usr/share/filebeat/filebeat.yml
-      - ../src/logs:/var/log/filebeat/service:ro
+      - ../storage/logs:/var/log/filebeat/service:ro
       #- ../prod/logs:/var/log/filebeat/service:ro
       - logs:/var/log/filebeat
       - logs:/app:ro
